prevent horizontal scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ body {
     background-color: white;
     font-family: 'Nunito',
         sans-serif;
+    overflow-x: hidden;
 }
 
 h1 {
